<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapFragment"
        android:title="@string/title_map"
        android:icon="@android:drawable/ic_menu_compass" />
    <item
        android:id="@+id/reportsFragment"
        android:title="@string/title_reports"
        android:icon="@android:drawable/ic_menu_recent_history" />
    <item
        android:id="@+id/statsFragment"
        android:title="@string/title_stats"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item
        android:id="@+id/toolsFragment"
        android:title="@string/title_tools"
        android:icon="@drawable/ic_tab_rake" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/title_settings"
        android:icon="@android:drawable/ic_menu_preferences" />
</menu>