<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="org.mountaineers.traillog.ui.map.MapFragment"
        android:label="@string/title_map" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="org.mountaineers.traillog.ui.reports.ReportsFragment"
        android:label="@string/title_reports" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="org.mountaineers.traillog.ui.stats.StatsFragment"
        android:label="@string/title_stats" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.mountaineers.traillog.ui.export.SettingsFragment"
        android:label="Settings" />
</navigation>